# reflective

./: .dockerfile  .dockerignore  .env.prod.enc  .gitignore  .sops.yaml  Dockerfile  build-deploy.sh  build.sh  compose.dev.yml  compose.prod.yml  deploy-new.sh  deploy.js  deploy.rs  deploy.sh  docker-compose.prod.yml  docker-compose.yml  install.sh
api/: login.http  login.hurl  signup.hurl  yaak.fl_2xEN7557Ew.yaml  yaak.fl_NF56fseXRY.yaml  yaak.fl_ZHvLbpeeKZ.yaml  yaak.rq_FrFCg8YbNa.yaml  yaak.rq_SPGZ9o2QKd.yaml  yaak.rq_XSQ4ykCa8k.yaml  yaak.rq_cmxQ99G34Z.yaml  yaak.rq_nz6YY4J2as.yaml  yaak.rq_ptXo76aaKZ.yaml  yaak.rq_qRDqv4wRSz.yaml  yaak.rq_syeqzYReMy.yaml  yaak.wk_2iqsX2rPhP.yaml
api/isojournal/: bruno.json  update_config.bru
api/reflective/: bruno.json  get_image.bru  get_images.bru  login.bru  signup.bru  update_config.bru  upload_images.bru
api/thesedays/: bruno.json
backend/: Cargo.toml
backend/src/: auth.rs  error.rs  image.rs  main.rs  migration.rs  user.rs  utils.rs
backup/: Dockerfile  backup.sh
frontend/: .eslintrc.js  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.tsx  service.ts  store.tsx  types.ts
frontend/src/api/: index.ts
frontend/src/pages/: Config.tsx  Login.tsx  Signup.tsx  Upload.tsx  View.tsx
frontend/src/store/: index.tsx
service/: Cargo.toml
service/.sqlx/: query-0220c0afd888ffbbb84f2d7838f308a07941a827ab01154d0394cc812904d30a.json  query-0dcb07f1cba32a1fd2d3e55ac147b0f8c5b26e978fe29c6c7a69e071680443c2.json  query-170508bf6d819cd081bd724c84e84cbea187ec13d09a73cd4ac22cdc4c278488.json  query-2ac646b5ee19e1e96f72c34a2bee0b8139dee853e812433f868ec46e2b56742d.json  query-3c378c618a4419bbbf5db004ed57a33194df1f657589404c5dd79ff3c155b88e.json  query-4784b8a1b0323e18f7d0457dd87e313caedacacf9a6088355e1b38f7e469689c.json  query-49488ddc82cc3e2253d3ea03fcdd889907ce3261c8526a5711fed116825446fa.json  query-49bbf5083297f7fd5b935bfb955ccb4f352e75632470e54475ba90344613823b.json  query-542892f73fb4b60dd7e99b0633f5e1e9c3f7d80d7b574b8c8a729228bf378100.json  query-56514e47b57726e58714dba993c6c2ae7bda7ab3243d4fc60542ca88d1f2fb78.json  query-576284e5d6cb7b3f54fed2f8a2bc9a8bd858396556375f692330a115ea2a4ea0.json  query-5fc4542e81bd57c2cf919894357e95e0ca2680e88102f445b6c2bcc3dce447eb.json  query-64bf4d9d4f49bbe40db9f34323e8c667f8703815d973464dad262997bac3a0b1.json  query-6f1dc09fda766d1243696b308302954724a8388b14fac95c384fe03b243addef.json  query-6fb9add399b1e762eb735694824289db74fe98eed6e62417f014d8ce365dba08.json  query-86e1ed54503ecc621422f634b7895c6ebe4630c60075c63a675c11f036322045.json  query-89380649fbc83a6846e600e0d6108eb2325337c89e0a382eb71c70ad5bb52c6f.json  query-8e51650a69308535f2d0e6939d62221a33b120561d3bea19b93692c49a3f3bfb.json  query-9194995432bd4acee122f29331910e803f243a4fdfffa2ec9a29788b9fdfa9ac.json  query-929652ce1b87a8034466e6d3aa327941eb83bd8a0c833ee91598fa1b9221937e.json  query-95a0ca6d371443335325b5fe2a54531af5945224d1b71def63b4f4082b692c2c.json  query-99aa15601e1c04b226fd327750689a1dcb531e923cc7b8431ebc47e212ea79a3.json  query-99f848f59f3fe4bc533e95921d3b46b90b2ec18fa4b90373b5b3b2e5d6ef8c91.json  query-a1a44627ff994f23c06af8b58774c7b2d80c406365004a406f1b61317d6d448b.json  query-ab941e58f04031dd762dd13d0bc763d901535dc7da8b1f5799d5ec69ffef3f88.json  query-c09cbf0a37655bb49f77edbf70983a480cd714333af4b1a63ba238637c5c0e3c.json  query-caa66a12194f8ee9202abe275aed37fba6a5ec5dd84175928d217fa7d75a3c08.json  query-ebbb7df755d271a2b2ec2cde76fcfea6b2c984522974cceb0456a60e78d30249.json  query-f19e32920046d6e9b33eeee88f1a67a24ca65c5961573ce0b2cd328a8f46d803.json  query-f23b1b5ca7311f854381043ccca9c4a32cbc340f74477b59d1449490de4af23f.json  query-fe95c66f9cf4c9f5041d81a5eada76bf0d3df59b9766d1c31f84adf0eddd391f.json
service/migrations/: 20250323215531_create_auth_tables.sql  20250323215638_create_image_tables.sql  20250323215710_create_tag_tables.sql  20250331191252_add_tag_lowercase_constraint.sql
service/src/: auth.rs  error.rs  image.rs  main.rs  migration.rs  s3_utils.rs  spa.rs  tag.rs  utils.rs  worker.rs
ui/: package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  index.tsx  utils.ts
ui/src/components/: Lightbox.tsx
ui/src/pages/: Config.tsx  Lightbox.tsx  Login.tsx  NotFound.tsx  Signup.tsx  Upload.tsx  View.tsx
ui/src/store/: index.tsx
ui/src/types/: index.ts
