[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
axum = { version = "0.6" }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }
rusqlite = { version = "0.29.0", features = ["bundled", "serde_json", "functions", "limits", "chrono", "uuid", "extra_check"] }
rusqlite_migration = "1.0.2"