[package]
name = "backend"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
axum = { version = "0.8.1", features = ["macros", "query", "multipart"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "macros", "migrate", "uuid", "json" ] }
thiserror = "1.0.56"
bcrypt = "0.15.0"
rand = "0.8.5"
rust-s3 = "0.33.0"
image = { version = "0.25.0", features = ["avif"] }
kamadak-exif = "0.6.1"
reqwest = "0.11.27"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
futures = "0.3.31"
jiff = "0.2.4"
