[package]
name = "reflective"
version = "0.1.21"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
axum = { version = "0.8.4", features = ["macros", "query", "multipart"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "macros", "migrate", "uuid", "json" ] }
thiserror = "1.0.56"
bcrypt = "0.15.0"
rand = "0.8.5"
rust-s3 = "0.33.0"
image = { version = "0.25.0", features = ["avif"] }
kamadak-exif = "0.6.1"
reqwest = "0.11.27"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
futures = "0.3.31"
jiff = "0.2.4"
uuid = { version = "1.16.0", features = ["v7", "std", "serde"] }
rust-embed = "8.6.0"
mime_guess = "2.0.5"
tokio-util = "0.7"
async-channel = "2.3"
time = "0.3"
rayon = "1.10"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry = "0.30.0"
opentelemetry-otlp = "0.30.0"
tracing-opentelemetry = "0.31.0"
opentelemetry-stdout = "0.30.0"
opentelemetry-semantic-conventions = "0.30.0"
